remove file khong can thiet

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -121,7 +121,7 @@
 /*** Navbar ***/
 .sidebar .navbar .navbar-nav .nav-link {
     padding: 7px 20px;
-    color: var(--light);
+    /* color: var(--light); */
     font-weight: 500;
     border-left: 3px solid var(--secondary);
     border-radius: 0 30px 30px 0;
